# PyLaunch

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: GettingStarted.md  OBJSpinner.md  TerminalApp.md
examples/snake/: snake.py
scripts/: launcher.py
termarcade/: __init__.py  ansi.py  app.py  input.py  objspin.py  termarcade_diagnose_report.txt
termarcade.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
termarcade/assets/: lambda.obj.pkl
tests/: test_ansi.py  test_objspin.py
