[project]
name = "termarcade"
version = "0.1.0"
description = "Terminal UI + cacheable OBJ ASCII spinner (with menu & colors)"
authors = [{name="You"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["termarcade*"]
